# austin-analysis

./: .gitignore  .kilo.json  AGENTS.md  Dockerfile  HANDOFF_0606.md  Makefile  ORIGINAL_REQUEST.md  README.md  THESIS_CONTEXT_FOR_LLM.md  compile_pdf.ps1  create_zip.ps1  delegate.md  docker-compose.yml  docker.ps1  dummy_data.csv  dummy_params.json  fix_ui.py  help_calib.txt  pyproject.toml  requirements-lock.txt  requirements.txt  streamlit_app.py  take_screenshots.py  take_screenshots_all.py  test_fixes.py  test_run.ps1  thesis_rozdzial_3.md  thesis_rozdzial_4.md  thesis_rozdzial_5.md  tmp.csv  update_pl.py  update_train_adopted_regression.py  update_train_advanced.py
.agents/: CLOSEOUT.md  COMMANDS.md  PHASE1_KNOWLEDGE.md  PHASE2_KNOWLEDGE.md  PHASE3_KNOWLEDGE.md  README.md  REPO_MAP.md
.kilo/: session_survival_analysis_progress.md
.omx/: metrics.json
.streamlit/: config.toml
THESIS_LATEX_FINAL/: AGENTS.md  abstract.tex  glowny.aux  glowny.bbl  glowny.blg  glowny.fdb_latexmk  glowny.out  glowny.synctex  glowny.tex  glowny.toc  rozdzial1.tex  rozdzial2.tex  rozdzial3.tex  rozdzial4.tex  rozdzial5.tex  rozdzial6.tex  rozdzial7.tex  rozdzial8.tex  wipb.cls
agentsbatch2/: COMPLETION_REPORT.md  batch2-plan.md  batch2-summary.md  batch2_comm.md  batch2_p2_comm.md  changes_documentation.md  communication.md  communication.txt  documentation_review.md  final_summary.md  implementer_changes.md  main-batch2-plan.md  orchestrator.md  orchestrator_log.txt  p1_fix_summary.md  p1_review.md  p1_test_results.md  p1_validation.md  p2_changes_summary.md  p2_gap_analysis.md  (+15 more)
(+447 files in other folders)
