[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aac-adoption"
version = "1.0.0"
description = "ML pipeline for Austin Animal Center adoption prediction"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "catboost>=1.2",
    "shap>=0.45",
    "plotly>=5.20",
    "lifelines>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "streamlit>=1.35", "altair>=5", "notebook>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: multi-module tests using temporary artifacts",
  "acceptance: requires canonical generated thesis artifacts",
  "slow: model training, backtesting, or full pipeline checks",
]
addopts = "--strict-markers"

[tool.setuptools.packages.find]
where = ["src"]
